--- a/src/datasetsite.mustache
+++ b/src/datasetsite.mustache
@@ -961,10 +961,9 @@
 
                 <h2 property="dct:title">{{name}}</h2>
 
-                <p class="description">{{description}}</p>
-
+                <p class="description">{{description}}, published using <a href='https://www.openactive.io/'>OpenActive</a> <a href='https://www.openactive.io/realtime-paged-data-exchange/1.0/'>RPDE 1.0</a> and <a href='{{schemaVersion}}'>Model 2.0</a>.</p>
+                <p class="metadata" property="dct:description">{{description}}.</p>
                 <p class="metadata" property="dct:created" content='{{datePublished}}' datatype='xsd:dateTime'></p>
-                <p class="metadata" property="dct:description">{{description}}</p>
                 {{#keywords}}
                 <p class="metadata" property="dcat:keyword">{{.}}</p>
                 {{/keywords}}
@@ -1010,7 +1009,7 @@
         <!-- Footer -->
         <footer id="footer">
             <ul class="copyright">
-                <li>Platform: <a href="{{bookingService.url}}">{{bookingService.name}} {{bookingService.softwareVersion}}</a>. Design: <a href="http://html5up.net">HTML5 UP</a>.</li>
+                <li>{{#bookingService}}Platform: <a href="{{url}}">{{name}} {{softwareVersion}}</a>. {{/bookingService}}Design: <a href="http://html5up.net">HTML5 UP</a>.</li>
             </ul>
         </footer>
 
